# FreeRDP

./: CMakeLists.txt
channels/audin/client/: audin_main.c
channels/urbdrc/: CMakeLists.txt
channels/urbdrc/client/: CMakeLists.txt  data_transfer.c  data_transfer.h  isoch_queue.c  isoch_queue.h  searchman.c  searchman.h  urbdrc_main.c  urbdrc_main.h  urbdrc_types.h
channels/urbdrc/client/libusb/: CMakeLists.txt  libusb_udevice.c  libusb_udevice.h  libusb_udevman.c  request_queue.c  request_queue.h
client/Android/: ModuleOptions.cmake
client/Android/FreeRDPCore/jni/: Android.mk.cmake  android_cliprdr.c  android_event.c  android_freerdp.c  android_jni_callback.c  input.h  (+1 more)
client/X11/: xf_gfx.c
client/common/: client.c  cmdline.c
cmake/: WindowsDLLVersion.rc.in
include/freerdp/: codecs.h  freerdp.h  primitives.h
include/freerdp/codec/: h264.h
include/freerdp/utils/: msusb.h
libfreerdp/: CMakeLists.txt
libfreerdp/codec/: clear.c  h264.c  nsc.c
libfreerdp/core/: codecs.c  transport.c
libfreerdp/crypto/: tls.c
libfreerdp/gdi/: gfx.c
libfreerdp/primitives/: prim_YUV.c  prim_YUV_opt.c  prim_copy.h
libfreerdp/primitives/test/: TestPrimitivesYUV.c
libfreerdp/utils/: msusb.c
scripts/: android-build-openssl.sh  android-build.conf  autoformat.sh  format_code.sh  openssl-64arch.patch
server/Sample/: sfreerdp.c
winpr/include/winpr/: file.h  path.h
winpr/libwinpr/file/: file.c  generic.c  namedPipeClient.c
winpr/libwinpr/handle/: handle.h
winpr/libwinpr/path/: shell.c
winpr/libwinpr/pipe/: pipe.c
winpr/libwinpr/sysinfo/: sysinfo.c
(+4 files in other folders)
